# autoware_homework

./: .gitignore  LICENSE  README.md
project1-RGBCloudmapping/Mapping/: CMakeLists.txt
project1-RGBCloudmapping/Mapping/config/apollo/: front_camera_extrinsic.yaml  front_camera_intrinsic.yaml  left_back_camera_extrinsic.yaml  left_back_camera_intrinsic.yaml  lidar_extrinsic.yaml  right_back_camera_extrinsic.yaml  right_back_camera_intrinsic.yaml
project1-RGBCloudmapping/Mapping/data/rgbcloud/: 1625465933339089155.txt  1625465933439089155.txt  1625465933539089155.txt  1625465933639089155.txt  1625465933739089155.txt  1625465933839089155.txt  1625465933939089155.txt  1625465934039089155.txt  1625465934139089155.txt  1625465934239089155.txt  1625465934339089155.txt  1625465934439089155.txt  1625465934539089155.txt  1625465934639089155.txt  1625465934739089155.txt  1625465934839089155.txt  1625465934939089155.txt  1625465935039089155.txt  1625465935139089155.txt  1625465935239089155.txt  1625465935339089155.txt  1625465935439089155.txt  1625465935539089155.txt  1625465935639089155.txt  1625465935739089155.txt  1625465935839089155.txt  1625465935939089155.txt  1625465936039089155.txt  1625465936139089155.txt  1625465936239089155.txt  1625465936339089155.txt  1625465936439089155.txt  1625465936539089155.txt  1625465936639089155.txt  1625465936739089155.txt  1625465936839089155.txt  1625465936939089155.txt  1625465937039089155.txt  1625465937139089155.txt  1625465937239089155.txt  (+60 more)
project1-RGBCloudmapping/Mapping/lib/Mapping/: ndt_mapping.cpp  ndt_mapping.h
project1-RGBCloudmapping/Mapping/test/: mapping_test.cpp
project1-RGBCloudmapping/RGBCloudProject/: CMakeLists.txt
project1-RGBCloudmapping/RGBCloudProject/config/: sensors_calib_apollo.yml
project1-RGBCloudmapping/RGBCloudProject/data/apollo/lidar/: 11673.pcd
project1-RGBCloudmapping/RGBCloudProject/lib/LidarProcess/: rgblidar_process.cpp  rgblidar_process.h
project1-RGBCloudmapping/RGBCloudProject/test/: rgb_cloud.cpp
project2-gnss_projection/src/gnss/: CMakeLists.txt
project2-gnss_projection/src/gnss/src/: geo_pos_conv.cpp
project2-gnss_projection/src/gnss_projection/: CMakeLists.txt  package.xml
project2-gnss_projection/src/gnss_projection/config/: sensors_calib.yml
project2-gnss_projection/src/gnss_projection/launch/: gnss_projection.launch
project2-gnss_projection/src/gnss_projection/map_data/: bin_Laser-00147_-00849.pcd  bin_Laser-00147_-00850.pcd
project2-gnss_projection/src/gnss_projection/nodes/: gnss_projection_core.cpp  gnss_projection_core.h  gnss_projection_node.cpp
project2-gnss_projection/src/ndt_cpu/src/: NormalDistributionsTransform.cpp  Registration.cpp  VoxelGrid.cpp
project3-CloudCluster/Track3dVisualizer/: CMakeLists.txt  README.md
project3-CloudCluster/Track3dVisualizer/data/pcd/: demo_map_around.pcd
project3-CloudCluster/Track3dVisualizer/src/: PointsCloudProcess.cpp  PointsCloudProcess.h  VisualizerSet.cpp  VisualizerSet.h  run_test.cpp
